<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:padding="20sp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:text="@string/sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/idetname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/radio"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/idrbmale"
            android:text="@string/male"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp" />
        <RadioButton
            android:id="@+id/idrbfemale"
            android:text="@string/female"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="45dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/idetemail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <EditText
        android:id="@+id/idetpassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <EditText
        android:id="@+id/idetphone"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/idetsubmit"
        android:text="@string/submit"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>