<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_background"
        android:layout_width="90dp"
        android:layout_height="90dp" />
    <EditText
        android:id="@+id/idetemail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/idetpassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textSize="15sp"
        android:id="@+id/idetlogin"
        android:text="@string/login"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/idetsubmit"
        android:text="@string/add_new_member"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>